--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>GPS Safe Solutions Canada</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
 
     <link href="./assets/app/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -29,6 +29,6 @@
     <script src="./assets/app/js/gauge.min.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmdMnJY62bTAjU3Sk3IVGGOIMPSe7OMjQ&libraries=places"></script>
-<script src="runtime-es2015.9e0e91bd71d734e79040.js" type="module"></script><script src="runtime-es5.9e0e91bd71d734e79040.js" nomodule defer></script><script src="polyfills-es5.0290b245fbcca09184ac.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="scripts.55b9f192b3c79ec83093.js" defer></script><script src="main-es2015.4a8fd9f7aeada84751b2.js" type="module"></script><script src="main-es5.4a8fd9f7aeada84751b2.js" nomodule defer></script></body>
+<script src="runtime-es2015.d2f776b5dcf1aa5c871e.js" type="module"></script><script src="runtime-es5.d2f776b5dcf1aa5c871e.js" nomodule defer></script><script src="polyfills-es5.0290b245fbcca09184ac.js" nomodule defer></script><script src="polyfills-es2015.ffa9bb4e015925544f91.js" type="module"></script><script src="scripts.55b9f192b3c79ec83093.js" defer></script><script src="main-es2015.d14c7a460e48066152fe.js" type="module"></script><script src="main-es5.d14c7a460e48066152fe.js" nomodule defer></script></body>
 
 </html>
